--- a/README.Rmd
+++ b/README.Rmd
@@ -1,24 +1,23 @@
 ---
-output:
-  md_document:
-    variant: markdown_github
+output: 
+  github_document:
+    html_preview: false
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
-```{r, echo = FALSE}
+```{r, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(
+  fig.align = 'center',
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-",
-  eval = FALSE
-)
+  fig.path = "man/figures/README-")
 ```
 
 # googlesites
 
-[![Build Status](https://travis-ci.org/ReportMort/googlesites.png?branch=master)](https://travis-ci.org/ReportMort/googlesites)
-[![Coverage Status](https://img.shields.io/codecov/c/github/ReportMort/googlesites/master.svg)](https://codecov.io/github/ReportMort/googlesites?branch=master)
+[![Build Status](https://travis-ci.org/StevenMMortimer/googlesites.svg?branch=master)](https://travis-ci.org/StevenMMortimer/googlesites)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/StevenMMortimer/googlesites?branch=master&svg=true)](https://ci.appveyor.com/project/StevenMMortimer/googlesites)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/googlesites)](http://cran.r-project.org/package=googlesites)
+[![Coverage Status](https://codecov.io/gh/StevenMMortimer/googlesites/branch/master/graph/badge.svg)](https://codecov.io/gh/StevenMMortimer/googlesites?branch=master)
 
 **googlesites** is the R implementation of the Google Sites API. Using this package 
 assumes you've used the Web UI to create your site. Once you've 
@@ -28,33 +27,51 @@ HTML pages and other static content locally and under version control and push i
 to your site programmatically whenever you feel like it.
 
 See my blog post on why Google Sites aren't such a bad thing: 
-[Google Sites for Documentation](https://reportmort.netlify.com/2017/06/01/google-sites-for-documentation/)
+[Google Sites for Documentation](https://stevenmortimer.com/google-sites-for-documentation/)
 
 ### Vignettes
 
 The README below outlines some basic functionality, for more practical scenarios, 
 please refer to the vignettes:
 
-  * [Getting Started with googlesites](https://rawgit.com/ReportMort/googlesites/master/vignettes/getting-started-with-googlesites.html)
+  * [Getting Started with googlesites](https://rawgit.com/StevenMMortimer/googlesites/master/vignettes/getting-started-with-googlesites.html)
   
 ### Basic Usage
 
 First, you'll need to install this package from GitHub.
 
-```{r install}
-devtools::install_github("ReportMort/googlesites")
+```{r install, eval=FALSE}
+devtools::install_github("StevenMMortimer/googlesites")
 ```
 
 Second, you'll need to go through a process of authenticating with Google and 
 specifying the domain and site name so you don't have to refer to it explicitly each 
 time you call a function.
 
-```{r load-package}
+```{r auth, include=FALSE}
+library(googlesites)
+options(googlesites.site_domain = "site") # or your Apps domain
+options(googlesites.site_name = "sitesrtest")
+
+library(googleAuthR)
+options(googleAuthR.client_id = getOption("googlesites.client_id"))
+options(googleAuthR.client_secret = getOption("googlesites.client_secret"))
+options(googleAuthR.scopes.selected = "https://sites.google.com/feeds/")
+this_token <- readRDS(file.path(".", "tests", "testthat", "googlesites_token.rds"))
+gar_auth(this_token)
+```
+
+```{r load-package, eval=FALSE}
 library(googlesites)
 options(googlesites.site_domain = "site") # or your Apps domain
 options(googlesites.site_name = "my-site")
 
 library(googleAuthR)
+options(googleAuthR.client_id = "012345678901-99thisisatest99.apps.googleusercontent.com")
+options(googleAuthR.client_secret = "Th1s1sMyC1ientS3cr3t")
+# or you can use the package default client
+options(googleAuthR.client_id = getOption("googlesites.client_id"))
+options(googleAuthR.client_secret = getOption("googlesites.client_secret"))
 options(googleAuthR.scopes.selected = "https://sites.google.com/feeds/")
 gar_auth()
 ```
@@ -82,7 +99,7 @@ find_content(value_to_match='API Test',
 
 #### Upload an Attachment to your Page
 
-```{r uploading-attachment}
+```{r uploading-attachment, eval=FALSE}
 pdf_cheatsheet <- 'https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf'
 download.file(pdf_cheatsheet, 'rmarkdown-cheatsheet-2.0.pdf', mode="wb")
 
@@ -104,8 +121,4 @@ This package currently supports the bare minimum for maintaining and uploading
 content to a Google Site. It's anticipated that other functions to list sites, 
 create sites, update site categories, and manage user permissions will be created and 
 added to this package in the future to expand its capabilities. Thank you for using.
-
-### License
-
-The **googlesites** package is licensed under the MIT License (http://choosealicense.com/licenses/mit/).  
   
